force-app/main/default/objects/Depense__c/Depense__c.object-meta.xml
<CustomObject>
    <description>Objet pour gérer les dépenses</description>
    <label>Dépense</label>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Numéro de dépense</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dépenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>