force-app/main/default/objects/Depense__c/fields/Annee_Fiscale__c.field-meta.xml
<CustomField>
    <fullName>Annee_Fiscale__c</fullName>
    <label>Année Fiscale</label>
    <type>Text</type>
    <length>4</length>
</CustomField>