force-app/main/default/objects/Depense__c/fields/Bien_Locatif__c.field-meta.xml
<CustomField>
    <fullName>Bien_Locatif__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Bien locatif associé à la dépense</description>
    <label>Bien Locatif</label>
    <referenceTo>Bien_Locatif__c</referenceTo>
    <relationshipLabel>Dépenses</relationshipLabel>
    <relationshipName>Depenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>