force-app/main/default/objects/Depense__c/fields/Date_Depense__c.field-meta.xml
<CustomField>
    <fullName>Date_Depense__c</fullName>
    <label>Date Dépense</label>
    <type>Date</type>
</CustomField>