force-app/main/default/objects/Depense__c/fields/Frequence__c.field-meta.xml
<CustomField>
    <fullName>Frequence__c</fullName>
    <label>Fréquence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
                <default>true</default>
                <label>Mensuelle</label>
            </value>
            <value>
                <fullName>Trimestrielle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>