force-app/main/default/objects/Depense__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <label>Montant</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>