force-app/main/default/objects/Depense__c/fields/Montant_Assurance_Pret__c.field-meta.xml
<CustomField>
    <fullName>Montant_Assurance_Pret__c</fullName>
    <label>Montant Assurance Prêt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>