force-app/main/default/objects/Depense__c/fields/Montant_Capital__c.field-meta.xml
<CustomField>
    <fullName>Montant_Capital__c</fullName>
    <label>Montant Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>