force-app/main/default/objects/Depense__c/fields/Montant_Charge_Copro__c.field-meta.xml
<CustomField>
    <fullName>Montant_Charge_Copro__c</fullName>
    <label>Montant Charge Copro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>