force-app/main/default/objects/Depense__c/fields/Montant_Fonds_Travaux_loi_Alur__c.field-meta.xml
<CustomField>
    <fullName>Montant_Fonds_Travaux_loi_Alur__c</fullName>
    <label>Montant Fonds Travaux loi Alur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>