force-app/main/default/objects/Depense__c/fields/Montant_Interets__c.field-meta.xml
<CustomField>
    <fullName>Montant_Interets__c</fullName>
    <label>Montant Intérêts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>