force-app/main/default/objects/Depense__c/fields/Montant_Total__c.field-meta.xml
<CustomField>
    <fullName>Montant_Total__c</fullName>
    <formula>CASE(
    RecordType.DeveloperName,
    &apos;Autre&apos;, Montant__c,
    &apos;Charge_Copro&apos;, Montant_Charge_Copro__c + Montant_Fonds_Travaux_loi_Alur__c,
    &apos;Credit_Immobilier&apos;, Montant_Capital__c + Montant_Interets__c + Montant_Assurance_Pret__c,
    &apos;Credit_Immobilier_Travaux&apos;, Montant_Capital__c + Montant_Interets__c + Montant_Assurance_Pret__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>