force-app/main/default/objects/Depense__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taxe foncière</fullName>
            </value>
            <value>
                <fullName>Assurance</fullName>
            </value>
            <value>
                <fullName>Charges de copropriété</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>