force-app/main/default/objects/Depense__c/fields/NumeroContratPret__c.field-meta.xml
<CustomField>
    <fullName>NumeroContratPret__c</fullName>
    <description>Numéro de contrat bancaire du prêt rattaché au bien</description>
    <formula>CASE(
    RecordType.DeveloperName,
    &apos;Credit_Immobilier&apos;, Bien_Locatif__r.NumeroPretImmo__c,
    &apos;Credit_Immobilier_Travaux&apos;, Bien_Locatif__r.NumeroPretTravaux__c,
    &apos;&apos;
)</formula>
    <label>Numéro Contrat Prêt</label>
    <type>Text</type>
</CustomField>