force-app/main/default/objects/Depense__c/fields/Recuperable__c.field-meta.xml
<CustomField>
    <fullName>Recuperable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Récupérable</label>
    <type>Checkbox</type>
</CustomField>