force-app/main/default/objects/Depense__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A payer</fullName>
                <default>true</default>
                <label>A payer</label>
            </value>
            <value>
                <fullName>Payé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>