force-app/main/default/objects/Depense__c/fields/Statut_Icon__c.field-meta.xml
<CustomField>
    <fullName>Statut_Icon__c</fullName>
    <formula>IF(
    ISPICKVAL(Statut__c, &apos;Payé&apos;),
    IMAGE(&apos;/img/samples/flag_green.gif&apos;, &apos;Payé&apos;, 16, 16),
    IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;A payer&apos;, 16, 16)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut Icon</label>
    <type>Text</type>
</CustomField>