force-app/main/default/objects/Depense__c/recordTypes/Charge_Copro.recordType-meta.xml
<RecordType>
    <fullName>Charge_Copro</fullName>
    <active>true</active>
    <label>Charge Copro</label>
</RecordType>