force-app/main/default/objects/Depense__c/recordTypes/Credit_Immobilier.recordType-meta.xml
<RecordType>
    <fullName>Credit_Immobilier</fullName>
    <active>true</active>
    <label>Crédit Immobilier</label>
</RecordType>