force-app/main/default/objects/Depense__c/recordTypes/Credit_Immobilier_Travaux.recordType-meta.xml
<RecordType>
    <fullName>Credit_Immobilier_Travaux</fullName>
    <active>true</active>
    <label>Credit Immobilier Travaux</label>
</RecordType>