force-app/main/default/objects/Depense__c/listViews/AH.listView-meta.xml
<ListView>
    <fullName>AH</fullName>
    <columns>Statut_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Annee_Fiscale__c</columns>
    <columns>Bien_Locatif__c</columns>
    <columns>Montant__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nature__c</columns>
    <columns>Date_Depense__c</columns>
    <columns>Statut__c</columns>
    <columns>Montant_Capital__c</columns>
    <columns>Montant_Interets__c</columns>
    <columns>Montant_Assurance_Pret__c</columns>
    <columns>Montant_Total__c</columns>
    <columns>Frequence__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Annee_Fiscale__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Depense__c.Autre</value>
    </filters>
    <filters>
        <field>Bien_Locatif__c</field>
        <operation>contains</operation>
        <value>2 Rue henri d</value>
    </filters>
    <filters>
        <field>Nature__c</field>
        <operation>equals</operation>
        <value>Assurance PNO</value>
    </filters>
    <label>AH</label>
</ListView>