force-app/main/default/objects/Depense__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>Statut_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Annee_Fiscale__c</columns>
    <columns>Bien_Locatif__c</columns>
    <columns>Montant__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nature__c</columns>
    <columns>Date_Depense__c</columns>
    <columns>Statut__c</columns>
    <columns>Montant_Total__c</columns>
    <columns>Frequence__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nature__c</field>
        <operation>equals</operation>
        <value>CFE</value>
    </filters>
    <label>ALL</label>
</ListView>