force-app/main/default/objects/Depense__c/listViews/X8_rue_de_metz.listView-meta.xml
<ListView>
    <fullName>X8_rue_de_metz</fullName>
    <columns>Statut_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Annee_Fiscale__c</columns>
    <columns>Bien_Locatif__c</columns>
    <columns>Montant__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nature__c</columns>
    <columns>Date_Depense__c</columns>
    <columns>Statut__c</columns>
    <columns>Montant_Total__c</columns>
    <columns>Frequence__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Annee_Fiscale__c</field>
        <operation>equals</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>Bien_Locatif__c</field>
        <operation>equals</operation>
        <value>8 rue de metz</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>A payer</value>
    </filters>
    <label>8 rue de metz</label>
</ListView>